# FlagEvalMM

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
docs/: tasks.md
flagevalmm/: eval.py  registry.py
flagevalmm/common/: __init__.py  const.py  image_utils.py  logger.py  video_utils.py
flagevalmm/dataset/: __init__.py  data_preprocessor.py  retrieval_base_dataset.py  t2i_base_dataset.py  t2v_base_dataset.py  utils.py  vqa_base_dataset.py
flagevalmm/evaluator/: __init__.py  aggregation_evaluator.py  base_evaluator.py  clip_score_evaluator.py  coco_evaluator.py  common_types.py  inception_metrics_evaluator.py  mmmu_dataset_evaluator.py  one_align_evaluator.py  pre_process.py  retrieval_evaluator.py  video_score_evaluator.py  vqascore_evaluator.py
flagevalmm/models/: __init__.py  base_api_model.py  base_imgen_api_model.py  base_model_adapter.py  claude.py  doubao_image.py  flux.py  gemini.py  gpt.py  http_client.py  http_image_client.py  hunyuan.py  hunyuan_image.py  kolors.py  model_cache.py  qwen.py  sense_mirage.py  test_api_models.py
flagevalmm/prompt/: __init__.py  prompt_template.py  prompt_tools.py
flagevalmm/server/: __init__.py  evaluation_server.py  model_server.py  run_server.py  server_dataset.py  utils.py
model_zoo/: .gitignore  README.md
scripts/: lint.sh
tasks/chart_qa/: chart_qa_test.py  evaluate.py  process.py
tasks/charxiv/: charxiv_val.py  evaluate.py  process.py
tasks/cii_bench/: REAMME.md  cii_bench_test.py  evaluate.py  process.py
tasks/cmmu/: cmmu.py  (+3 more)
(+75 files in other folders)
